--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
     "node": "12"
   },
   "dependencies": {
+    "@google-cloud/speech": "^4.1.1",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1"
   },
