--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "parcel-bundler": "^1.12.4",
     "rimraf": "^3.0.2",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "firebase": "^7.17.2"
   }
 }
