--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@google-cloud/speech": "^4.1.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "ora": "^5.0.0"
   },
   "devDependencies": {
+    "@types/node": "^14.0.27",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
