moved some files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-  "cSpell.words": [
-    "lgim",
-    "parens",
-    "preloader"
-  ],
-  "python.linting.enabled": true,
-  "python.linting.pylintEnabled": true
+  "cSpell.words": ["parens"]
 }
