--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node app for using Google's Speech to Text API",
   "main": "dist/index.js",
   "scripts": {
-    "build": "parcel build index.ts --target node"
+    "build": "parcel build index.ts --target node",
+    "dev": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
     "ora": "^5.0.0"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
