--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "parcel build index.ts --target node",
-    "dev": "ts-node index.ts"
+    "dev": "ts-node index.ts",
+    "lint:fix": "npm run lint -- --fix",
+    "lint": "eslint *.ts"
   },
   "repository": {
     "type": "git",
@@ -22,7 +24,13 @@
     "ora": "^5.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "parcel-bundler": "^1.12.4",
+    "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
