--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "parcel build src/ts/index.ts --target node",
     "dev": "ts-node src/ts/index.ts",
     "lint:fix": "npm run lint -- --fix",
-    "lint": "eslint *.ts"
+    "lint": "eslint *.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -26,13 +27,16 @@
     "uninstall": "0.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.9",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.4.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.5",
+    "ts-jest": "^26.2.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
