--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Node app for using Google's Speech to Text API",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "parcel build src/ts/index.ts --target node",
-    "dev": "ts-node src/ts/index.ts",
+    "build": "tsc",
+    "dev": "ts-node src/index.ts",
     "lint:fix": "npm run lint -- --fix",
     "lint": "eslint *.ts",
     "test": "jest"
@@ -25,6 +26,7 @@
     "ora": "^5.0.0"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.9.4",
     "@types/jest": "^26.0.9",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
@@ -32,7 +34,6 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.0",
-    "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.5",
     "ts-jest": "^26.2.0",
     "ts-node": "^8.10.2",
