trying to figure out exports

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "speech-to-text",
   "version": "1.0.0",
   "description": "Node app for using Google's Speech to Text API",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node src/index.ts",
-    "docs:init": "cp ./temp/speech-to-text.api.json ./docs/speech-to-text.api.json",
-    "docs": "api-documenter markdown --input-folder docs --output-folder docs/md",
-    "extract": "api-extractor run --local --verbose",
+    "dev": "ts-node ./src/index.ts",
+    "docs:init": "cp ./temp/speech-to-text.api.json ./docs/input/speech-to-text.api.json",
+    "docs": "api-documenter markdown --input-folder ./docs/input --output-folder ./docs/md",
+    "extract": "api-extractor run --local --diagnostics",
     "lint:fix": "npm run lint -- --fix",
     "lint": "eslint *.ts",
     "test": "jest"
@@ -32,6 +32,7 @@
     "@microsoft/api-documenter": "^7.8.25",
     "@microsoft/api-extractor": "^7.9.4",
     "@types/jest": "^26.0.9",
+    "@types/node": "^14.0.27",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
