readded key.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-  "cSpell.words": [
-    "Google's",
-    "LGIM",
-    "parens",
-    "protos",
-    "tsdoc"
-  ]
+  "cSpell.words": ["Google's", "parens", "protos"]
 }
