google auth progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "cSpell.words": ["Google's", "parens", "protos"]
+  "cSpell.words": [
+    "Google's",
+    "parens",
+    "protos",
+    "quickstart"
+  ]
 }
