formatted and added to package.json scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "cSpell.words": [
     "Google's",
-    "Resample",
     "parens",
     "protos",
-    "quickstart"
+    "quickstart",
+    "resample",
   ]
 }
