--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,9 @@
   "cSpell.words": [
     "Google's",
     "parens",
+    "programmatically",
     "protos",
     "quickstart",
-    "resample",
+    "resample"
   ]
 }
