--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "prettier:base": "prettier \"./*({.github,docs,src,test}/**/)*.{json,md}\"",
     "prettier:fix": "npm run prettier:base -- --write",
     "prettier": "npm run prettier:base -- --check",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -47,12 +47,14 @@
     "@microsoft/api-extractor": "^7.9.4",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
+    "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.0",
+    "node-fetch": "^2.6.0",
     "prettier": "^2.0.5",
     "ts-jest": "^26.2.0",
     "ts-node": "^8.10.2",
