before build:all

--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "scripts": {
+    "build:all": "npm run build && npm run ts:all && npm run docs",
     "build": "tsc",
-    "dev": "ts-node ./src/index.ts",
-    "docs:generate": "api-documenter markdown --input-folder ./docs/input --output-folder ./docs/md",
-    "docs:init": "cp ./temp/transcribe-stt.api.json ./docs/input/transcribe-stt.api.json",
+    "docs:generate": "api-documenter markdown --input-folder docs/input --output-folder docs/md",
+    "docs:init": "cpy temp/transcribe-stt.api.json docs/input/transcribe-stt.api.json",
     "docs": "npm run build && npm run extract && npm run docs:init && npm run docs:generate && npm run lint:fix",
     "eslint:fix": "npm run eslint -- --fix",
-    "eslint": "eslint \"./{src,test}/*.ts\"",
+    "eslint": "eslint \"./{scripts/ts/**,src,test}/*.ts\"",
     "extract": "api-extractor run --local --verbose",
     "lint:fix": "npm run eslint:fix && npm run prettier:fix",
     "lint": "npm run eslint && npm run prettier",
     "prettier:base": "prettier \"./*({.github,docs,src,test}/**/)*.{json,md}\"",
     "prettier:fix": "npm run prettier:base -- --write",
     "prettier": "npm run prettier:base -- --check",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles",
+    "ts:all": "npm run ts:language-code",
+    "ts:language-code": "ts-node scripts/ts/languageCode && cpy \"scripts/ts/languageCode/LanguageCode.ts\" \"src\" && npm run lint:fix"
   },
   "repository": {
     "type": "git",
@@ -50,6 +52,7 @@
     "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
+    "cpy-cli": "^3.1.1",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
