fixed linting scripts

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "docs:init": "cpy \"temp/transcribe-stt.api.json\" \"docs/input\"",
     "docs": "npm run build && npm run extract && npm run docs:init && npm run docs:generate",
     "eslint:fix": "npm run eslint -- --fix",
-    "eslint": "eslint \"./{scripts/ts/**,src,test}/*.ts\"",
+    "eslint": "eslint \"./{scripts/ts,src,test}/**/*.ts\"",
     "extract": "api-extractor run --local --verbose",
     "lint:fix": "npm run eslint:fix && npm run prettier:fix",
     "lint": "npm run eslint && npm run prettier",
-    "prettier:base": "prettier \"./*({.github,docs,src,test}/**/)*.{json,md}\"",
+    "prettier:base": "prettier \"./*({.github,docs,etc,temp}/**/)*.{json,md}\"",
     "prettier:fix": "npm run prettier:base -- --write",
     "prettier": "npm run prettier:base -- --check",
     "test": "jest --detectOpenHandles",
