--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   "env": {
     "es2017": true
   },
+  "ignorePatterns": "jest.config.js",
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
