--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "files": [
     "dist/**/*.ts",
     "dist/**/*.js",
-    "dist/**/*.ts"
+    "dist/**/*.ts",
+    "scripts/bash"
   ],
   "scripts": {
     "build:all": "npm run ts:all && npm run docs && npm run lint:fix",
