--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scripts/bash/*.sh"
   ],
   "scripts": {
-    "build:all": "npm run ts:all && npm run docs && npm run lint:fix",
+    "build:all": "npm run ts:types && npm run docs && npm run lint:fix",
     "build": "rimraf dist && tsc",
     "docs:generate": "api-documenter markdown --input-folder docs/input --output-folder docs/md",
     "docs:init": "cpy \"temp/transcribe-stt.api.json\" \"docs/input\"",
@@ -25,8 +25,10 @@
     "prettier:fix": "npm run prettier:base -- --write",
     "prettier": "npm run prettier:base -- --check",
     "test": "jest --detectOpenHandles",
-    "ts:all": "npm run ts:language-code",
-    "ts:language-code": "ts-node scripts/ts/LanguageCode && cpy \"scripts/ts/LanguageCode/output/LanguageCode.ts\" \"src/generated\""
+    "ts:language-code": "ts-node scripts/ts/LanguageCode && cpy \"scripts/ts/LanguageCode/output/LanguageCode.ts\" \"src/generated\"",
+    "ts:svg:fix": "ts-node scripts/ts/svg/fix \"./docs/assets\"",
+    "ts:svg": "ts-node scripts/ts/svg \"./docs/assets\"",
+    "ts:types": "npm run ts:language-code"
   },
   "repository": {
     "type": "git",
@@ -68,6 +70,8 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "xml-formatter": "^2.1.3",
+    "yargs": "^15.4.1"
   }
 }
