--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "eslint:fix": "npm run eslint -- --fix",
     "eslint": "eslint \"./{scripts/ts,src,test}/**/*.ts\"",
     "extract": "api-extractor run --local --verbose",
-    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
-    "lint": "npm run eslint && npm run prettier",
+    "lint:fix": "npm run eslint:fix && npm run prettier:fix && npm run ts:svg:fix",
+    "lint": "npm run eslint && npm run prettier && npm run ts:svg",
     "prettier:base": "prettier \"./*({.github,docs,etc,temp}/**/)*.{json,md}\"",
     "prettier:fix": "npm run prettier:base -- --write",
     "prettier": "npm run prettier:base -- --check",
