--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier": "npm run prettier:base -- --check",
     "test": "jest --detectOpenHandles",
     "ts:language-code": "ts-node scripts/ts/LanguageCode && cpy \"scripts/ts/LanguageCode/output/LanguageCode.ts\" \"src/generated\"",
-    "ts:svg:fix": "ts-node scripts/ts/svg/fix \"./docs/assets\"",
+    "ts:svg:fix": "npm run ts:svg -- --fix",
     "ts:svg": "ts-node scripts/ts/svg \"./docs/assets\"",
     "ts:types": "npm run ts:language-code"
   },
