post-process exports lint done

--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "eslint:fix": "npm run eslint -- --fix",
     "eslint": "eslint \"./{scripts/ts,src,test}/**/*.ts\"",
     "extract": "api-extractor run --local --verbose",
-    "lint:fix": "npm run eslint:fix && npm run prettier:fix && npm run ts:svg:fix",
-    "lint": "npm run eslint && npm run prettier && npm run ts:svg",
+    "lint:fix": "npm run eslint:fix && npm run prettier:fix && npm run ts:svg:fix && npm run ts:exports:fix",
+    "lint": "npm run eslint && npm run prettier && npm run ts:svg && npm run ts:exports",
     "prettier:base": "prettier \"./*({.github,docs,etc,temp}/**/)*.{json,md}\"",
     "prettier:fix": "npm run prettier:base -- --write",
     "prettier": "npm run prettier:base -- --check",
     "test": "jest --detectOpenHandles",
+    "ts:exports:fix": "npm run ts:exports -- --fix",
+    "ts:exports": "ts-node scripts/ts/exports \"./src\"",
     "ts:language-code": "ts-node scripts/ts/LanguageCode && cpy \"scripts/ts/LanguageCode/output/LanguageCode.ts\" \"src/generated\"",
     "ts:svg:fix": "npm run ts:svg -- --fix",
     "ts:svg": "ts-node scripts/ts/svg \"./docs/assets\"",
@@ -71,6 +73,7 @@
     "ts-jest": "^26.2.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
+    "typescript-parser": "^2.6.1",
     "xml-formatter": "^2.1.3",
     "yargs": "^15.4.1"
   }
