--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     "parens",
     "programmatically",
     "protos",
-    "resample"
+    "resample",
+    "spec"
   ],
   "cSpell.allowCompoundWords": true
 }
