--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "eslint:fix": "npm run eslint -- --fix",
     "eslint": "eslint \"./{scripts/ts,src,test}/**/*.ts\"",
     "extract": "api-extractor run --local --verbose",
-    "lint:fix": "npm run eslint:fix && npm run prettier:fix && npm run ts:svg:fix && npm run ts:exports:fix",
-    "lint": "npm run eslint && npm run prettier && npm run ts:svg && npm run ts:exports",
+    "lint:fix": "npm run eslint:fix && npm run prettier:fix && npm run ts:svg:fix && npm run ts:lint:fix",
+    "lint": "npm run eslint && npm run prettier && npm run ts:svg && npm run ts:lint",
     "prettier:base": "prettier \"./*({.github,docs,etc,temp}/**/)*.{json,md}\"",
     "prettier:fix": "npm run prettier:base -- --write",
     "prettier": "npm run prettier:base -- --check",
     "test": "jest --detectOpenHandles",
-    "ts:exports:fix": "npm run ts:exports -- --fix",
-    "ts:exports": "ts-node scripts/ts/exports \"./src\"",
     "ts:language-code": "ts-node scripts/ts/LanguageCode && cpy \"scripts/ts/LanguageCode/output/LanguageCode.ts\" \"src/generated\"",
+    "ts:lint:fix": "npm run ts:lint -- --fix",
+    "ts:lint": "ts-node scripts/ts/lint \"./src\"",
     "ts:svg:fix": "npm run ts:svg -- --fix",
     "ts:svg": "ts-node scripts/ts/svg \"./docs/assets\"",
     "ts:types": "npm run ts:language-code"
