lint scripts done

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "extract": "api-extractor run --local --verbose",
     "lint:fix": "npm run eslint:fix && npm run prettier:fix && npm run ts:svg:fix && npm run ts:lint:fix",
     "lint": "npm run eslint && npm run prettier && npm run ts:svg && npm run ts:lint",
-    "prettier:base": "prettier \"./*({.github,docs,etc,temp}/**/)*.{json,md}\"",
+    "prettier:base": "prettier \"./?(*(.github|docs|etc|temp)/**/)*.{json,md}\"",
     "prettier:fix": "npm run prettier:base -- --write",
     "prettier": "npm run prettier:base -- --check",
     "test": "jest --detectOpenHandles",
@@ -66,6 +66,7 @@
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "glob": "^7.1.6",
     "jest": "^26.4.0",
     "node-fetch": "^2.6.0",
     "prettier": "^2.0.5",
