--- a/scripts/ts/tsconfig.json
+++ b/scripts/ts/tsconfig.json
@@ -3,6 +3,7 @@
     "lib": [
       "ES2019"
     ] /* Specify library files to be included in the compilation. */,
-    "strictNullChecks": true /* Enable strict null checks. */
+    "strictNullChecks": true /* Enable strict null checks. */,
+    "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
   }
 }
