--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "prettier:base": "prettier \"./?(*(.github|docs|etc|temp)/**/)*.{json,md}\"",
     "prettier:fix": "npm run prettier:base -- --write",
     "prettier": "npm run prettier:base -- --check",
-    "test": "jest --detectOpenHandles",
+    "test": "jest --detect-open-handles",
     "ts:language-code": "ts-node scripts/ts/LanguageCode && cpy \"scripts/ts/LanguageCode/output/LanguageCode.ts\" \"src/generated\"",
     "ts:lint:fix": "npm run ts:lint -- --fix",
     "ts:lint": "ts-node scripts/ts/lint \"./src\"",
@@ -66,11 +66,11 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "glob": "^7.1.6",
-    "jest": "^26.4.0",
+    "jest": "^26.4.2",
     "node-fetch": "^2.6.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.2.0",
+    "ts-jest": "^26.3.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
     "typescript-parser": "^2.6.1",
