added some README.md files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,12 @@
   "cSpell.words": [
     "ESNEXT",
     "Google's",
+    "linting",
     "parens",
     "programmatically",
     "protos",
     "resample",
     "spec",
     "tslib"
-  ],
-  "cSpell.allowCompoundWords": true
+  ]
 }
