--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,38 +1,30 @@
 {
+  "env": {
+    "es2017": true
+  },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:import/typescript"
   ],
-  "env": {
-    "es2017": true
-  },
   "ignorePatterns": "jest.config.js",
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
-    "ecmaFeatures": {
-      "impliedStrict": true
-    }
+    "ecmaFeatures": { "impliedStrict": true }
   },
   "plugins": ["prettier", "@typescript-eslint", "import"],
   "rules": {
-    "prettier/prettier": "error",
     "@typescript-eslint/no-empty-function": [
       "error",
       { "allow": ["arrowFunctions"] }
     ],
-    "@typescript-eslint/no-namespace": "off",
     "import/order": [
       "error",
       {
-        "alphabetize": {
-          "order": "asc",
-          "caseInsensitive": true
-        },
+        "alphabetize": { "order": "asc", "caseInsensitive": true },
         "groups": [
           ["builtin", "external"],
           "internal",
@@ -43,6 +35,7 @@
         ]
       }
     ],
+    "prettier/prettier": "error",
     "sort-imports": [
       "error",
       { "ignoreCase": true, "ignoreDeclarationSort": true }
